was added new year text and some css to be aligned correctly

--- a/style.css
+++ b/style.css
@@ -14,6 +14,17 @@
     display: flex;
     justify-content: space-between;
     padding-bottom: 50px;
+    flex-direction : column;
+}
+.numbersContainer
+{
+    display: flex;
+}
+.newYearText
+{
+   text-align: center;
+   font-size: 3rem;
+   font-weight: bold;
 }
 .each
 {
@@ -24,6 +35,7 @@
     display: flex;
     flex-direction: column;
     padding: 30px;
+    font-weight: bold;
     
 }
 
@@ -46,6 +58,8 @@ h1
     display: flex;
     align-items: center;
     background-image: url(img/snowPic.jpg);
-    background-size: cover;
+    background-size: fit;
+    
+    
     
 }
